Fix probe-caught bugs (OpenRC empty depend(), self-test check) + docs
The CI probe validated the real mutation lifecycle on every platform and
caught two bugs the off-platform unit tests couldn't:

- OpenRC: the writer emitted an empty `depend() {}` when a spec had no
  dependencies, which is a POSIX-shell syntax error (openrc-run sources the
  script) — `rc-service start` failed with "unexpected }". depend() is
  optional, so only emit it when there are dependencies. +2 writer tests.
- SelfTestCli: the "read round-trips command" check hard-coded /bin/sleep,
  so it failed on Windows (which uses `ping`). Compare against the actual
  installed command instead — platform-agnostic and a stronger check.

With these, the probe's SelfTestCli passes on macOS, systemd, OpenRC, and
Windows (the FFM ServiceHost reaches RUNNING + real PID and stops cleanly).

Docs (README, CLAUDE.md, api-design.md): mark all four backends done; record
the JDK 25 baseline, the Windows design/limitations, and the probe findings.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016yeL9wycTeMsDS2MWLcirf